<resources>
    <string name="app_name">RestaurantReviewer</string>
    <string name="review">Review</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="restaurant_opening_hours">Restaurant Opening Hours</string>
    <string name="reviews">Reviews:</string>
    <string name="menu_map">Show on map</string>
    <string name="menu_filter">Filter</string>
    <string name="filter_reset">Reset filter</string>
    <string name="filter_byname">Filter alphabetically</string>
    <string name="filter_byname_asc">A-Å</string>
    <string name="filter_byname_desc">Å-A</string>
    <string name="filter_byrating">Filter by rating</string>
    <string name="filter_byrating_asc">Lowest first</string>
    <string name="filter_byrating_desc">Highest first</string>
    <string name="filter_minRating">Show only rated above...</string>
    <string name="filter_minRating_2">2</string>
    <string name="filter_minRating_3">3</string>
    <string name="filter_minRating_4">4</string>
    <string name="tvRestaurantInfo">Restaurant:</string>
    <string name="tvReviewerInfo">Reviewer:</string>
    <string name="etReviewHint">Write detailed review here... (optional)</string>
    <string name="tvWordCount">Count: %d / 150 characters</string>
    <string name="btnRemoveImg">Remove Picture</string>
    <string name="btnBackToRestaurant">Back</string>
    <string name="btnSaveReview">Save</string>
    <string name="imgReviewCD">Review picture</string>
    <string name="tvSetRating">Set rating:</string>
    <string name="title_activity_maps">Map</string>
    <string name="restaurantInfo">Restaurant: %s</string>
    <string name="reviewerInfo">Reviewer: %s</string>
    <string name="REVIEW_NO_CHANGES">No changes saved</string>
    <string name="REVIEW_CREATED">Review created</string>
    <string name="REVIEW_UPDATED">Review updated</string>
    <string name="REVIEW_FAILURE">Operation failed</string>
    <string name="UNKNOWN_RESULT_CODE_RETURNED">Unexpected behaviour</string>
    <string name="click_restaurant_to_open">Click restaurant to open</string>
    <string name="pop_up_name">Name</string>
    <string name="pop_up_date">Date</string>
    <string name="review_cell_name">Name</string>
    <string name="review_cell_date">Date</string>
</resources>