<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.EditCreateActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/llReviewInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <TextView
            android:id="@+id/tvRestaurantInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRestaurantInfo"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvReviewerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReviewerInfo"
            android:paddingBottom="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_gravity="center"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSpinnerHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/llReviewInfo">

        <TextView
            android:id="@+id/tvSetRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSetRating"
            android:textSize="17sp"/>

        <Spinner
            android:id="@+id/spRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

    </LinearLayout>
    
    <EditText
        android:id="@+id/etReview"
        android:inputType="textMultiLine"
        android:maxLength="150"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSpinnerHolder"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:gravity="start"
        android:hint="@string/etReviewHint"/>
    
    <TextView
        android:id="@+id/tvWordCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etReview"
        android:text="@string/tvWordCount"/>

    <LinearLayout
        android:id="@+id/llImgHolder"
        android:layout_marginTop="30dp"
        android:layout_below="@id/tvWordCount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgReview"
            android:onClick="onClickTakePicture"
            android:contentDescription="@string/imgReviewCD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="75dp"
            android:paddingStart="75dp"
            android:paddingBottom="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/addimage"/>

    </LinearLayout>

    
    <LinearLayout
        android:id="@+id/llImgBtnHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/llImgHolder">

        <Button
            android:id="@+id/btnRemoveImg"
            android:onClick="onClickRemovePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRemoveImg"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottomBtnHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/btnBackToRestaurant"
            android:onClick="onClickGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/arrow"
            android:background="@color/white"
            android:text="@string/btnBackToRestaurant"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnSaveReview"
            android:onClick="onClickSaveReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/save"
            android:background="@color/white"
            android:text="@string/btnSaveReview"/>

    </LinearLayout>

</RelativeLayout>